--- a/src/sass/blocks/_game.sass
+++ b/src/sass/blocks/_game.sass
@@ -1,7 +1,9 @@
 .game
+    display: none
     background-color: $main-bg
     height: 100vh
     padding-top: 50px
+    box-sizing: border-box
     &__wrapper
         display: flex
         align-items: flex-end
