--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,12 @@
 * 
     margin: 0
     padding: 0
-    box-sizing: border-box
-
+    /** box-sizing: border-box **/
+    
+body 
+    height: 100%
+    width: 100%
+    background-color: rgba(8,8,8,1.0)
 
 .container 
     max-width: 90%
@@ -10,5 +14,6 @@
 
 @import "base/_mixins"
 @import "base/_variables"
+@import "blocks/_loader"
 @import "blocks/_header"
 @import "blocks/_game"
