--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,5 +15,6 @@ body
 @import "base/_mixins"
 @import "base/_variables"
 @import "blocks/_loader"
+@import "blocks/_preplay"
 @import "blocks/_header"
 @import "blocks/_game"
