hard logic is done

--- a/src/sass/blocks/_game.sass
+++ b/src/sass/blocks/_game.sass
@@ -51,6 +51,15 @@
             @include sb
             width: 250px
             
+.correct
+    background-color: green
 
+.incorrect
+    background-color: red
+
+.current
+    background-color: #fff
+    border-radius: 5px
+    color: #11bbe7
 
     
