--- a/src/sass/blocks/_game.sass
+++ b/src/sass/blocks/_game.sass
@@ -7,7 +7,7 @@
     &__wrapper
         display: flex
         align-items: flex-end
-    &__questions 
+    &__questions
         width: 65%
     &__question
         margin-top: 150px
@@ -15,7 +15,7 @@
         background-color: $main-bg
         color: white
         @include center
-        font-size: 32px
+        font-size: 30px
         font-weight: 700
         box-shadow: 3px 3px 13px $purple, -3px -3px 13px $purple
         border-radius: 10px
@@ -38,28 +38,41 @@
             transform: scale(1.005)
     &__prize
         margin-left: 10%
-        
-        
+
     &__levels
         display: flex
         flex-direction: column-reverse
         color: white
         line-height: 45px
         font-size: 30px
-        
+
         li
             @include sb
             width: 250px
-            
+
+@keyframes blink
+    100%
+        background-color: #2dd624
+
 .correct
     background-color: green
+    font-weight: bold
+    animation: blink .5s linear
+    animation-iteration-count: 3
+    animation-fill-mode: forwards
+
+@keyframes blink2
+    100%
+        background-color: #b73131
 
 .incorrect
-    background-color: red
+    animation: blink2 .5s linear infinite
+    animation-iteration-count: 3
+    animation-fill-mode: forwards
 
 .current
-    background-color: #fff
-    border-radius: 5px
-    color: #11bbe7
+    color: #3ac6ea
+    text-shadow: 0 0 15px #0bfdfd
 
-    
+.past
+    color: grey
