--- a/src/sass/blocks/_gameOver.sass
+++ b/src/sass/blocks/_gameOver.sass
@@ -23,4 +23,35 @@
         img
             max-width: 100%
             max-height: 100%
-            
+    &__btn
+        position: absolute
+        left: 50%
+        bottom: 15%
+        transform: translateX(-50%)
+        padding: 10px 25px
+        border-radius: 10px
+        outline: none
+        font-size: 25px
+        font-weight: 700
+        box-shadow: 0 2px 5px #11bbe7
+        border: 0
+        border-bottom: 4px solid #11bbe7
+        background: linear-gradient(to bottom right, #84fab0 0%, #3ac6ea 51%, #84fab0 100%)
+        transition: 0.4s
+        cursor: pointer
+        &::after
+            content: 'Хорошо'
+            @include center
+            position: absolute
+            top: 0
+            left: 0
+            right: 0
+            bottom: 0
+            background: linear-gradient(to top left, #3ac6ea 0%, #84fab0 51%, #3ac6ea 100%)
+            z-index: -1
+            opacity: 0
+            transition: .3s ease-in-out
+            border-radius: 10px
+        &:hover::after
+            opacity: 1
+            z-index: 10
