--- a/src/sass/blocks/_gameOver.sass
+++ b/src/sass/blocks/_gameOver.sass
@@ -55,3 +55,9 @@
         &:hover::after
             opacity: 1
             z-index: 10
+    &__prize
+        text-align: center
+    &__sum
+        text-align: center
+    &__finalMes
+        text-align: center   
