--- a/src/sass/blocks/_preplay.sass
+++ b/src/sass/blocks/_preplay.sass
@@ -96,3 +96,10 @@
             width: 100%
             background-color: #03e9f4
             border-radius: 0 0 50% 50%
+    &__about_winner
+        margin-top: 15px
+        height: 25px
+        width: 100%
+        background-color: #fff
+        @include sb
+        padding: 5px 7px
