--- a/src/sass/blocks/_game.sass
+++ b/src/sass/blocks/_game.sass
@@ -76,3 +76,17 @@
 
 .past
     color: grey
+
+.friendSaid 
+    animation: blinkY .5s linear
+    animation-iteration-count: 3
+    animation-fill-mode: forwards
+    
+    
+@keyframes blinkY
+    0%
+        background-color: orange
+    50%
+        background-color: orange
+    100% 
+        background-color: transparent
