--- a/src/sass/blocks/_gameOver.sass
+++ b/src/sass/blocks/_gameOver.sass
@@ -60,4 +60,6 @@
     &__sum
         text-align: center
     &__finalMes
-        text-align: center   
+        text-align: center  
+        margin-top: 15px 
+
