--- a/src/sass/blocks/_preplay.sass
+++ b/src/sass/blocks/_preplay.sass
@@ -74,7 +74,7 @@
             transition: .5s
             color: grey
     &__title-list
-        margin-top: 17px
+        margin-top: 23px
         text-align: center
         color: #03e9f4
         position: relative
@@ -97,9 +97,16 @@
             background-color: #03e9f4
             border-radius: 0 0 50% 50%
     &__about_winner
-        margin-top: 15px
+        box-sizing: border-box
+        margin-top: 12px
         height: 25px
         width: 100%
-        background-color: #fff
+        background-color: #0b818a
+        color: #fff
         @include sb
         padding: 5px 7px
+        cursor: pointer
+    
+.user-score
+    font-weight: 700
+    
