--- a/src/sass/blocks/_gameOver.sass
+++ b/src/sass/blocks/_gameOver.sass
@@ -13,20 +13,21 @@
         transform: translate(-50%, -50%)
         width: 500px
         height: 350px
-        background-color: #fff
+        background-color: #131920
         border-radius: 10px
-        box-shadow: 3px 3px 10px #11bbe7, -3px -3px 10px #11bbe7
+        color: #fff
+        box-shadow: 3px 3px 10px #11bbe7, -3px -3px 10px #8b00ff
     &__img
         width: 150px
-        height: 100px
-        margin: 20px auto
+        height: 150px
+        margin: 0 auto
         img
             max-width: 100%
             max-height: 100%
     &__btn
         position: absolute
         left: 50%
-        bottom: 15%
+        bottom: 13%
         transform: translateX(-50%)
         padding: 10px 25px
         border-radius: 10px
